# gerrydb-etl

./: LICENSE  README.md  pyproject.toml
cherrydb_etl/: __init__.py  bootstrap.sh  create.py  db.py
cherrydb_etl/bootstrap/: localities_base.py  pl_all.sh  pl_bootstrap.sh  pl_geo.py  pl_geo.sh  pl_init.sh  pl_localities.py  pl_pop.sh  pl_pop_table_columns.py  pl_pop_tables.py  templated_columns.py
cherrydb_etl/bootstrap/columns/: pl_geo.yaml
gerrydb_etl/: TODO.md  __init__.py  db.py
gerrydb_etl/bootstrap/: acs_tables.py  daves_enacted.py  pl_all.sh  pl_config.py  pl_geo.py  pl_geo.sh  pl_geo_aiannh.sh  pl_geo_and_pop_substates.sh  pl_geo_states.sh  pl_init.sh  pl_localities.py  pl_pop.sh  pl_pop_aiannh.sh  pl_pop_table_columns.py  pl_pop_tables.py  templated_columns.py
gerrydb_etl/bootstrap/columns/: medsl_2018_2020.yaml  pl_geo.yaml
gerrydb_etl/bootstrap/pl_adjusted/: SOURCES.md
