[tool.poetry]
name = "cherrydb-etl"
version = "0.1.0"
description = "ETL/data bootstrapping scripts for MGGG's redistricting analytics platform"
authors = ["Parker J. Rule <parker.rule@tufts.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cherrydb_etl"}]

[tool.poetry.dependencies]
python = "^3.10"
utm = "^0.7.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

