[tool.poetry]
name = "gerrydb-etl"
version = "0.1.0"
description = "ETL/data bootstrapping scripts for MGGG's redistricting analytics platform"
authors = ["Parker J. Rule <parker.rule@tufts.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gerrydb_etl"}]

[tool.poetry.dependencies]
python = "^3.10"
utm = "^0.8.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

